# rye-template

./: .gitignore  README.md  pyproject.toml
.github/workflows/: code_quality.yaml
badges/: coverage.xml
docs/: development.md  navigation.md
src/rye_template/: hello_world.py  main.py
tests/: test_hello_world.py
